--- a/src/pages/account-user-signup.f7.html
+++ b/src/pages/account-user-signup.f7.html
@@ -1,61 +1,18 @@
 <template>
-<div class="page" data-name="account-page">
-  <!-- navbar user content page -->
-  <div id="navbarUserAccount">
-    <div class="navbar">
-      <div class="navbar-bg"></div>
-      <div class="navbar-inner sliding">
-        <div class="left">
-          <a href="#">
-            <i class="icon f7-icons padding-left">person_alt_circle</i>
-          </a>
-        </div>
-        <div class="title">Developer</div>
-        <div class="right">
-          <a href="/keranjang/" class="link icon-only tab-link">
-            <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
-          </a>
-        </div>
+<div class="page" data-name="account-user-signup-page">
+  <div class="navbar">
+    <div class="navbar-bg"></div>
+    <div class="navbar-inner sliding">
+      <div class="left">
+        <a href="#">
+          <i class="icon f7-icons padding-left">person_alt_circle</i>
+        </a>
       </div>
-    </div>
-  </div>
-
-  <!-- navbar user log in page -->
-  <div id="navbarUserLogInPage">
-    <div class="navbar">
-      <div class="navbar-bg"></div>
-      <div class="navbar-inner sliding">
-        <div class="left">
-          <a href="#">
-            <i class="icon f7-icons padding-left">person_alt_circle</i>
-          </a>
-        </div>
-        <div class="title">Log In</div>
-        <div class="right">
-          <a href="/keranjang/" class="link icon-only tab-link">
-            <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
-          </a>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- navbar user log in page -->
-  <div id="navbarUserRegisterPage">
-    <div class="navbar">
-      <div class="navbar-bg"></div>
-      <div class="navbar-inner sliding">
-        <div class="left">
-          <a href="#">
-            <i class="icon f7-icons padding-left">person_alt_circle</i>
-          </a>
-        </div>
-        <div class="title">Sign Up</div>
-        <div class="right">
-          <a href="/keranjang/" class="link icon-only tab-link">
-            <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
-          </a>
-        </div>
+      <div class="title">Sign Up</div>
+      <div class="right">
+        <a href="/keranjang/" class="link icon-only tab-link">
+          <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
+        </a>
       </div>
     </div>
   </div>
