--- a/src/pages/account-user-signup.f7.html
+++ b/src/pages/account-user-signup.f7.html
@@ -18,78 +18,6 @@
   </div>
 
   <div class="page-content">
-    <div id="pageUserAccount">
-      <div class="card">
-        <div class="card-header"><a href="/pesanan/selesai" class="link text-color-black" style="font-size: 13px;"><i class="icon f7-icons" >square_list</i> Pesanan Saya</a><a href="/pesanan/selesai" class="link text-color-black" style="font-size: 13px;">Lihat Riwayat Pesanan <i class="icon f7-icons padding-top-half" style="font-size: 12px;">chevron_right</i></a></div>
-        <div class="card-content card-content-padding">
-          <div class="row">
-            <a href="/pesanan/belum-bayar" class="col" style="display: grid;">
-              <i class="icon f7-icons" style="width: auto;"><img class="" src="static/icons/wallet.png" alt=""></i>
-              <span class="padding-top-half text-align-center text-color-gray" style="font-size: 12px;">Belum Bayar</span>
-            </a>
-            <a href="/pesanan/dikemas" class="col" style="display: grid;">
-              <i class="icon f7-icons" style="width: auto;"><img class="" src="static/icons/box.png" alt=""></i>
-              <span class="padding-top-half text-align-center text-color-gray" style="font-size: 12px;">Dikemas</span>
-            </a>
-            <a href="/pesanan/dikirim" class="col" style="display: grid;">
-              <i class="icon f7-icons" style="width: auto;"><img class="" src="static/icons/delivery-truck.png" alt=""></i>
-              <span class="padding-top-half text-align-center text-color-gray" style="font-size: 12px;">Dikirim</span>
-            </a>
-          </div>
-        </div>
-      </div>    
-      <div class="list links-list">
-        <ul>
-          <li>
-            <div class="item-content">
-              <div class="item-media"><i class="f7-icons icon padding-left-half">gear_alt</i></div>
-              <div class="item-inner">
-                <div class="item-title">Pengaturan Akun</div>
-              </div>
-            </div>
-          </li>
-          <li><a href="/account-profil-saya/" class="text-color-gray" style="font-size: 12px;">Profil Saya</a></li>
-          <li><a href="/account-alamat-saya/" class="text-color-gray" style="font-size: 12px;">Alamat Saya</a></li>
-          <li><a href="/account-ubah-password/" class="text-color-gray" style="font-size: 12px;">Ubah Password</a></li>
-          <li class="padding-horizontal padding"><button class="button button-fill color-red" @click="logOut">LOGOUT</button></li>
-        </ul>
-      </div>
-    </div>
-
-    <div id="pageUserLogIn">
-      <form action="javascript:void(0)" id="formUserLogIn">
-        <div class="list no-hairlines-md">
-          <ul>
-            <li class="item-content item-input">
-              <div class="item-inner">
-                <div class="item-title item-floating-label">Email</div>
-                <div class="item-input-wrap">
-                  <input name="email" type="email" placeholder="email@gmail.com" required autocomplete="off">
-                  <span class="input-clear-button"></span>
-                </div>
-              </div>
-            </li>
-            <li class="item-content item-input">
-              <div class="item-inner">
-                <div class="item-title item-floating-label">Password</div>
-                <div class="item-input-wrap">
-                  <input name="password" type="password" placeholder="********" required autocomplete="off">
-                  <span class="input-clear-button"></span>
-                </div>
-              </div>
-            </li>
-            <li class="padding">
-              <button type="submit" class="button button-fill">Log In</button>
-            </li>
-          </ul>
-        </div>
-      </form>
-      <div class="block text-align-center">
-        Belum punya akun ?<br>
-        <a href="#" @click="userSignUpPage">Daftar sekarang!</a> Ini sangat mudah dan tidak perlu waktu lama!
-      </div>
-    </div>
-
     <div id="pageUserRegister">
       <form action="javascript:void(0)" id="formUserRegister">
         <div class="list no-hairlines-md">
@@ -129,7 +57,7 @@
       </form>
       <div class="block text-align-center">
         Sudah punya akun ?<br>
-        <a href="#" @click="userLogInPage">Masuk sekarang!</a> Ini sangat mudah dan tidak perlu waktu lama!
+        <a href="/account-user-login/">Masuk sekarang!</a> Ini sangat mudah dan tidak perlu waktu lama!
       </div>
     </div>
 
@@ -153,15 +81,28 @@
       const self = this;
 
       self.$app.localforage.getItem('users', function (err, value) {
-          // if err is non-null, we got an error. otherwise, value is the value
-          if (err===null) {
+        // if err is non-null, we got an error. otherwise, value is the value
+        if (err===null) {
+          self.$router.navigate('/account-user-signup/',{ transition: 'f7-fade' });
+        }
+
+        if ( value && (err===null) ) {
+          self.$router.navigate('/account-user-login/',{ transition: 'f7-fade' });
+        }
+      });
+
+      self.$$('#formUserRegister').on('submit',function(e){
+        let formData = self.$app.form.convertToData(this);
+        self.$app.request.post('https://anakhebatindonesia.com/JSON/register.php', formData, function(data){
+          if ( data.result == 'USER_ALREADY_EXIST' ) {
+            self.$app.dialog.alert('Maaf email yang anda masukan sudah terdaftar, silahkan coba kembali dengan email yang lain');
+          } else {
+            self.$app.localforage.setItem('users', data.result);
+
             self.$router.navigate('/account-user/',{ transition: 'f7-fade' });
           }
-
-          if ( value ) {
-            self.$router.navigate('/account-user-login/',{ transition: 'f7-fade' });
-          }
-        });
+        }, 'json')
+      })
     },
     beforeDestroy() {
       console.log('componentBeforeDestroy', this);
@@ -205,97 +146,6 @@
             console.log(err);
         });
       },
-      userLogInPage: function(){
-        let self = this;
-        let $$ = this.$$;
-        let app = this.$app;
-        this.displayDefault();
-
-        self.$app.localforage.getItem('users', function (err, value) {
-          // if err is non-null, we got an error. otherwise, value is the value
-          if (err===null) {
-            $$('#navbarUserLogInPage, #pageUserLogIn').addClass("display-block");
-            $$('#navbarUserAccount, #navbarUserRegisterPage, #pageUserAccount, #pageUserRegister').addClass('display-none');
-    
-            $$('#formUserLogIn').on('submit',function(e){
-              var formData = app.form.convertToData('#formUserLogIn');
-              app.request.post('https://anakhebatindonesia.com/auth_check.php', formData, function(data){
-                if ( data.data == 'USER_NOT_FOUND' ) {
-                  app.dialog.alert('Maaf email dan password yang anda masukan tidak sesuai, silahkan coba kembali');
-                } else {
-                  app.localforage.setItem('users', data.data);
-                  self.userAccount();
-                }
-                console.log(data)
-              }, 'json')
-              // alert(JSON.stringify(formData));
-            });
-          }
-
-          if ( value ) {
-           self.userAccount(); 
-          }
-        });
-
-      },
-      userSignUpPage: function(){
-        // initialize
-        let $$ = this.$$;
-        let app = this.$app;
-
-        // set to display default
-        this.displayDefault();
-
-        $$('div#navbarUserRegisterPage, div#pageUserRegister').addClass("display-block");
-        $$('#navbarUserAccount, #navbarUserLogInPage, #pageUserAccount, #pageUserLogIn').addClass('display-none');
-
-        $$('#formUserRegister').on('submit',function(e){
-          let formData = app.form.convertToData(this)
-          console.log('data register',formData)
-        })
-      },
-      userAccount: function(){
-        let self = this;
-        let $$ = this.$$;
-        this.displayDefault();
-        $$('#navbarUserAccount, #pageUserAccount').addClass("display-block");
-        $$('#navbarUserLogInPage, #navbarUserRegisterPage, #pageUserLogIn, #pageUserRegister').addClass('display-none');
-
-        self.$app.localforage.getItem('users', function (err, value) {
-          // if err is non-null, we got an error. otherwise, value is the value
-          if ( value ) {
-            console.log(value)
-            self.$$('#navbarUserAccount .title').html(value.nama);
-          }
-        });
-      },
-      displayDefault: function() {
-        let $$ = this.$$;
-        $$('#navbarUserAccount, #navbarUserLogInPage, #navbarUserRegisterPage, #pageUserAccount, #pageUserLogIn, #pageUserRegister').forEach(function(a,b){
-          let navAndPage = $$(a);
-          if ( navAndPage.hasClass('display-block') ) {
-            navAndPage.removeClass('display-block');
-          }
-          if ( navAndPage.hasClass('display-none') ) {
-            navAndPage.removeClass('display-none');
-          }
-        });
-      },
-      openAlert: function () {
-        var self = this;
-        self.$app.dialog.alert('Hello World');
-      },
-      logOut: function() {
-        let self = this;
-        self.$app.localforage.clear().then(function() {
-          // Run this code once the database has been entirely deleted.
-          console.log('Database is now empty.');
-          self.userLogInPage();
-        }).catch(function(err) {
-          // This code runs if there were any errors
-          console.log(err);
-        });
-      }
     },
     // Page Events
     on: {
