--- a/src/pages/carts-page.f7.html
+++ b/src/pages/carts-page.f7.html
@@ -12,6 +12,16 @@
       <div class="title">Keranjang Belanja</div>
     </div>
   </div>
+  <div class="toolbar toolbar-bottom">
+    <div class="toolbar-inner">
+      <div class="block" style="width: 100vw">
+        <div class="row">
+          <div class="col">SubTotal: Rp</div>
+          <div class="col"><button type="button" class="button button-fill">Checkout</button></div>
+        </div>
+      </div>
+    </div>
+  </div>
   <div class="page-content">
     <div class="block-title">Keranjang Belanja Kosong</div>
     <div class="card">
