--- a/src/pages/account-ubah-password.f7.html
+++ b/src/pages/account-ubah-password.f7.html
@@ -1,5 +1,5 @@
 <template>
-  <div class="page" data-name="account-profil-saya-page">
+  <div class="page" data-name="account-ubah-password-page">
     <div class="navbar">
       <div class="navbar-bg"></div>
       <div class="navbar-inner sliding">
@@ -13,31 +13,37 @@
       </div>
     </div>
     <div class="page-content">
-      <div class="list no-hairlines-md">
-        <ul>
-          <li class="item-content item-input">
-            <div class="item-inner">
-              <div class="item-title item-floating-label">Old Password</div>
-              <div class="item-input-wrap">
-                <input type="password" placeholder="Your old password">
-                <span class="input-clear-button"></span>
+      <form action="javascript:void(0)" id="formUbahPassword">
+        <div class="list no-hairlines-md">
+          <ul>
+            <li class="item-content item-input">
+              <div class="item-inner">
+                <div class="item-title item-floating-label">Old Password</div>
+                <div class="item-input-wrap">
+                  <input name="password_old" type="password" placeholder="Your old password" required="">
+                  <span class="input-clear-button"></span>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="item-content item-input">
-            <div class="item-inner">
-              <div class="item-title item-floating-label">New Password</div>
-              <div class="item-input-wrap">
-                <input type="password" placeholder="New password">
-                <span class="input-clear-button"></span>
+            </li>
+            <li class="item-content item-input">
+              <div class="item-inner">
+                <div class="item-title item-floating-label">New Password</div>
+                <div class="item-input-wrap">
+                  <input name="password_new" type="password" placeholder="New password" required="">
+                  <span class="input-clear-button"></span>
+                </div>
               </div>
-            </div>
-          </li>
-          <li class="padding">
-            <button class="button button-fill">UPDATE</button>
-          </li>
-        </ul>
-      </div>
+            </li>
+            <li class="item-content">
+              <div class="item-inner">
+                <input type="hidden" name="token">
+                <input type="hidden" name="id">
+                <button type="submit" class="button button-fill">UPDATE</button>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </form>
     </div>
   </div>
 </template>
@@ -60,6 +66,58 @@
     },
     mounted() {
       console.log('componentMounted', this);
+      const self = this;
+
+      self.$app.localforage.getItem('users').then(function(value) {
+          // This code runs once the value has been loaded
+          // from the offline store.
+          console.log(value);
+          if ( value ) {
+            let form = self.$$('form#formUbahPassword');
+            form.find('input[name=token]').val(value.token)
+            form.find('input[name=id]').val(value.id_member)
+          }
+      }).catch(function(err) {
+          // This code runs if there were any errors
+          console.log(err);
+      });
+
+      /* aksi form ubah password */
+      self.$$('form#formUbahPassword').on('submit',function(e){
+        var formData = self.$app.form.convertToData(this);
+        console.log(formData);
+        self.$app.request.post(`https://anakhebatindonesia.com/JSON/user_update_password.php`, formData, function(data){
+          console.log(data)
+          // if ( data.status===404 ) {
+          //   if ( data.result==='NO_ROW_UPDATED' ) {
+          //     self.$app.dialog.alert('Maaf anda belum melakukan perubahan');
+          //   }
+          // }
+
+          // if ( data.status===200 ) {
+          //   self.$app.localforage.getItem('users').then(function(value) {
+          //     // This code runs once the value has been loaded
+          //     // from the offline store.
+          //     value.nama = data.result.nama;
+          //     value.email = data.result.email;
+          //     value.no_telp = data.result.phone;
+          //     value.token = data.result.token;
+
+          //     self.$app.localforage.setItem('users', value).then(function (value) {
+          //       // Do other things once the value has been saved.
+          //       self.$app.dialog.alert('Data berhasil diubah');
+          //       self.$router.back('/account-user/',{force: true})
+          //     }).catch(function(err) {
+          //       // This code runs if there were any errors
+          //       console.log(err);
+          //     });
+          //   }).catch(function(err) {
+          //     // This code runs if there were any errors
+          //     console.log(err);
+          //   });
+          // }
+        }, 'json')
+      });
     },
     beforeDestroy() {
       console.log('componentBeforeDestroy', this);
