fix::proses password updated

--- a/src/pages/account-ubah-password.f7.html
+++ b/src/pages/account-ubah-password.f7.html
@@ -87,35 +87,36 @@
         var formData = self.$app.form.convertToData(this);
         console.log(formData);
         self.$app.request.post(`https://anakhebatindonesia.com/JSON/user_update_password.php`, formData, function(data){
-          console.log(data)
-          // if ( data.status===404 ) {
-          //   if ( data.result==='NO_ROW_UPDATED' ) {
-          //     self.$app.dialog.alert('Maaf anda belum melakukan perubahan');
-          //   }
-          // }
+          // console.log(data)
+          if ( data.status===404 ) {
+            if ( data.result==='NO_ROW_UPDATED' ) {
+              self.$app.dialog.alert('Maaf anda belum melakukan perubahan');
+            }
 
-          // if ( data.status===200 ) {
-          //   self.$app.localforage.getItem('users').then(function(value) {
-          //     // This code runs once the value has been loaded
-          //     // from the offline store.
-          //     value.nama = data.result.nama;
-          //     value.email = data.result.email;
-          //     value.no_telp = data.result.phone;
-          //     value.token = data.result.token;
+            if ( data.result==='NO_ROW_SELECTED' ) {
+              self.$app.dialog.alert('Maaf password lama anda tidak sesuai');
+            }
+          }
 
-          //     self.$app.localforage.setItem('users', value).then(function (value) {
-          //       // Do other things once the value has been saved.
-          //       self.$app.dialog.alert('Data berhasil diubah');
-          //       self.$router.back('/account-user/',{force: true})
-          //     }).catch(function(err) {
-          //       // This code runs if there were any errors
-          //       console.log(err);
-          //     });
-          //   }).catch(function(err) {
-          //     // This code runs if there were any errors
-          //     console.log(err);
-          //   });
-          // }
+          if ( data.status===200 ) {
+            self.$app.localforage.getItem('users').then(function(value) {
+              // This code runs once the value has been loaded
+              // from the offline store.
+              value.password = data.result.password;
+
+              self.$app.localforage.setItem('users', value).then(function (value) {
+                // Do other things once the value has been saved.
+                self.$app.dialog.alert('Data berhasil diubah');
+                self.$router.back('/account-user/',{force: true})
+              }).catch(function(err) {
+                // This code runs if there were any errors
+                console.log(err);
+              });
+            }).catch(function(err) {
+              // This code runs if there were any errors
+              console.log(err);
+            });
+          }
         }, 'json')
       });
     },
