--- a/src/pages/account-alamat-saya-ubah.f7.html
+++ b/src/pages/account-alamat-saya-ubah.f7.html
@@ -107,6 +107,9 @@
             </li>
           </ul>
         </div>
+        <div class="text-align-center" style="border-top: 3px solid rgb(224 224 224);border-bottom: 3px solid rgb(224 224 224);padding: 10px 0px;">
+          <a href="#" id="hapusAlamat" class="text-color-deeporange">Hapus Alamat</a>
+        </div>
         <div class="padding" style="position: fixed;bottom: 0px;width: 90vw; z-index: 1;">
           <input type="hidden" name="country_id" id="countryId" >
           <input type="hidden" name="province_id" id="provinceId" >
@@ -237,6 +240,8 @@
                 self.$$('form#formEditAddress input#form-input-token').val(value.token)
                 // set value hidden input address_id
                 self.$$('form#formEditAddress input#form-input-address_id').val(item.address_id)
+                // set link data-id Hapus alamat
+                self.$$('form#formEditAddress a#hapusAlamat').attr('data-id',item.address_id)
                 
                 // set checked if item.orders is 'primary'
                 if ( item.orders == 'primary' ) {
@@ -326,6 +331,29 @@
           // This code runs if there were any errors
           console.log(err);
       });
+
+      // aksi hapus alamat
+      self.$$('form#formEditAddress a#hapusAlamat').on('click',function(){
+        let formData = {
+          "token" : self.$$('form#formEditAddress input#form-input-token').val(),
+          "id" : self.$$(this).data('id')
+        };
+        // console.log(formData)
+        self.$app.request.get(`https://anakhebatindonesia.com/JSON/user_address_delete.php`, formData, function(data){
+          console.log(data)
+          if ( data.status===404 ) {
+            if ( data.result==='NO_ROW_DELETED' ) {
+              self.$app.dialog.alert('Maaf data Alamat gagal dihapus');
+            }
+          }
+
+          if ( data.status===200 ) {
+            self.$app.dialog.alert('Alamat berhasil dihapus');
+            self.$router.back('/account-alamat-saya/',{force: true});
+          }
+
+        }, 'json')
+      })
 
       // /* aksi form */
       self.$$('form#formEditAddress').on('submit',function(e){
