fix::halaman checkout with point reward

--- a/src/pages/books-detail.f7.html
+++ b/src/pages/books-detail.f7.html
@@ -11,7 +11,7 @@
         </div>
         <div class="title" id="titleDetailBuku">Nama Buku</div>
         <div class="right">
-          <a href="/keranjang/#from-book-details" class="link icon-only tab-link">
+          <a href="/keranjang/" class="link icon-only tab-link">
             <i class="icon f7-icons">cart<span class="badge color-red cart-label" style="display: none;">0</span></i>
           </a>
         </div>
