--- a/src/pages/carts-checkout.f7.html
+++ b/src/pages/carts-checkout.f7.html
@@ -1,5 +1,5 @@
 <template>
-<div class="page" data-name="carts-page">
+<div class="page" data-name="carts-checkout-page">
   <div class="navbar">
     <div class="navbar-bg"></div>
     <div class="navbar-inner sliding">
@@ -79,7 +79,7 @@
     mounted() {
       console.log('# CART PAGE --------------------------------------------------------------------',this);
       let self = this;
-      let page = self.$$('.page[data-name=carts-page]');
+      let page = self.$$('.page[data-name=carts-checkout-page]');
       let pageContentBlockTitle = page.find('.block-title');
       let pageContentUl = page.find('.page-content ul');
       
@@ -91,16 +91,9 @@
                 <div class="item-media"><img src="${item.result.image.thumbnail}" width="44"/></div>
                 <div class="item-inner">
                   <div class="item-title-row">
-                    <div class="item-title"><a href="/book/${item.id}">${item.result.title}</a></div>
+                    <div class="item-title" style="font-size: small">${item.result.title}</div>
                   </div>
-                  <div class="text-currency-primary"><span class="text-currency-format">Rp</span>${self.formatRupiah(item.idr)}</div>
-                  <div class="stepper stepper-small">
-                    <div class="stepper-button-minus"></div>
-                    <div class="stepper-input-wrap">
-                      <input type="text" value="${item.qty}" min="0" max="100" step="1" readonly>
-                    </div>
-                    <div class="stepper-button-plus"></div>
-                  </div>
+                  <div class="text-color-gray" style="font-size: small"><span class="float-left">Rp</span>${self.formatRupiah(item.idr)} <span class="float-right">x${item.qty}</span></div>
                 </div>
               </li>              
             `);
@@ -246,7 +239,7 @@
       },
       pageInit: function() {
         let self = this;
-        self.$$('.page[data-name=carts-page] .page-content ul').html('')
+
         // event toggle point reward
         self.$app.toggle.create({
           el: '#toggleCheckout',
@@ -277,10 +270,6 @@
           // console.log()
           // router.navigate(dataHref,{ transition: 'f7-push' })
         })
-      },
-      pageBeforeIn: function() {
-        let self = this;
-        
       }
 
     }
