penawaran khhusus updated

--- a/src/pages/books-release.f7.html
+++ b/src/pages/books-release.f7.html
@@ -151,6 +151,7 @@
         title['new-release'] = 'New Release';
         title['coming-soon'] = 'Coming Soon';
         title['best-seller'] = 'Recomended Book';
+        title['penawaran-khusus'] = 'Penawaran Khusus';
 
         return title[releaseSlug];
       },
