--- a/src/pages/home.f7.html
+++ b/src/pages/home.f7.html
@@ -9,7 +9,7 @@
             <img class="padding-left" src="static/icons/icon.png" alt="">
           </a>
         </div>
-        <div class="title">Anak Hebat</div>
+        <div class="title" style="font-size: medium;">Anak Hebat Indonesia</span></div>
         <div class="right">
           <a href="#" class="link icon-only">
             <i class="icon f7-icons">search</i>
@@ -41,7 +41,7 @@
             <i class="icon f7-icons" style="width: auto;">list_dash</i>
             <span class="text-align-center">Kategori</span>
           </a>
-          <a href="/page/penawaran-khusus#Penawaran Khusus" class="col" style="display: grid;">
+          <a href="#" @click="releaseBook('/book/release/penawaran-khusus')" class="link col" style="display: grid;">
             <i class="icon f7-icons" style="width: auto;">bubble_left_bubble_right</i>
             <span class="text-align-center">Penawaran Khusus</span>
           </a>
@@ -146,217 +146,68 @@
     // Lifecycle Hooks
     mounted() {
       console.log('# HOME PAGE --------------------------------------------------------------------');
+      let self = this;
 
       let $$ = this.$$;
       let app = this.$app;
       let router = this.$router;
 
       /* create data main slider */
-      app.request.getJSON('https://m.anakhebatindonesia.com/slide', function (data) {
-        let rows = [];
-        for (let index = 0; index < data.length; index++) {          
-          rows.push(`
-            <div class="swiper-slide">
-              <img data-src="${data[index].image.original}" class="swiper-lazy" width="100%">
-              <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:5px;margin-left:-50px"></div>
-            </div>
-          `);
+      app.localforage.getItem('mainSliders').then(data => {
+        if ( data ) {
+          self.renderSlide(data)
+        } else {
+          app.request.getJSON('https://m.anakhebatindonesia.com/slide', function (data) {
+            self.renderSlide(data)
+          });
         }
-        rows = rows.join('');
-        /* inject data slide */
-        $$('.swiper-main-slide > .swiper-wrapper').html(rows);
-
-        app.swiper.create('.swiper-main-slide', {
-          // Disable preloading of all images
-          preloadImages: false,
-          // Enable lazy loading
-          lazy: true,
-          loop: true,     
-          autoplay: {
-            delay: 2000,
-          },
-          slidesPerView: 1,
-          // speed: 400,
-          spaceBetween: 0,
-          pagination: {
-            el: '.swiper-pagination',
-            type: 'bullets',
-          },
-        });
-
-      });
+      }).catch(err => console.log(err))
 
       /* create swiper new release */
-      app.request.getJSON('https://m.anakhebatindonesia.com/books?release=new-release', function (data) {
-        let rows = [];
-        for (let index = 0; index < data.rows.length; index++) {
-          rows.push(`
-            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/book/${data.rows[index].id}">
-              <div style="min-height:146px">
-                <img data-src="${data.rows[index].image.thumbnail}" class="swiper-lazy" width="100%">
-                <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:-75px;margin-left:-50px"></div>
-              </div>
-              <center>
-                <div class="book-title-wrap">
-                  ${data.rows[index].title}
-                </div>
-                <div class="text-currency-primary">
-                  <span class="text-currency-format">Rp</span>${data.rows[index].price.idr.text}
-                </div>
-              </center>
-            </div>
-          `);
-          // console.log(data.rows[index])
+      app.localforage.getItem('releaseBooks').then(data => {
+        if ( data ) {
+          self.renderNewRelease(data)
+        } else {
+          app.request.getJSON('https://m.anakhebatindonesia.com/books?release=new-release', function (data) {
+            self.renderNewRelease(data)
+          });
         }
-        rows = rows.join('');
-        $$('.swiper-new-release > .swiper-wrapper').html(rows);
-
-        app.swiper.create('.swiper-new-release', {
-          // Disable preloading of all images
-          preloadImages: false,
-          // Enable lazy loading
-          // loop: true,
-          lazy: true, 
-          slidesPerView: 3,
-          spaceBetween: 10,
-        });
-
-        // event to load detail buku;
-        $$('.swiper-href').on('click',function(e){
-          let dataHref = $$(this).data('href');
-          router.navigate(dataHref,{ transition: 'f7-push' })
-        })
-      });
-
+      }).catch(err => console.log(err))
+      
       /* create swiper coming soon */
-      app.request.getJSON('https://m.anakhebatindonesia.com/books?release=coming-soon', function (data) {
-        let rows = [];
-        for (let index = 0; index < data.rows.length; index++) {
-          rows.push(`
-            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/book/${data.rows[index].id}" style="min-height:225px">
-              <div style="min-height:146px">
-                <img data-src="${data.rows[index].image.thumbnail}" class="swiper-lazy" width="100%">
-                <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:-75px;margin-left:-50px"></div>
-              </div>  
-              <center>
-                <div class="book-title-wrap">
-                  ${data.rows[index].title}
-                </div>
-                <div class="text-currency-primary">
-                  <span class="text-currency-format">Rp</span>${data.rows[index].price.idr.text}
-                </div>
-              </center>
-            </div>
-          `);
-          // console.log(data.rows[index])
+      app.localforage.getItem('comingSoonBooks').then(data => {
+        if ( data ) {
+          self.renderComingSoon(data)
+        } else {
+          app.request.getJSON('https://m.anakhebatindonesia.com/books?release=coming-soon', function (data) {
+            self.renderComingSoon(data)
+          });
         }
-        rows = rows.join('');
-        $$('.swiper-coming-soon > .swiper-wrapper').html(rows);
-
-        app.swiper.create('.swiper-coming-soon', {
-          // Disable preloading of all images
-          preloadImages: false,
-          // Enable lazy loading
-          // loop: true,
-          lazy: true, 
-          slidesPerView: 3,
-          spaceBetween: 10,
-        });
-
-        // event to load detail buku;
-        $$('.swiper-href').on('click',function(e){
-          let dataHref = $$(this).data('href');
-          router.navigate(dataHref,{ transition: 'f7-push' })
-        })
-
-      });
+      }).catch(err => console.log(err))
 
       /* create swiper recomended book */
-      app.request.getJSON('https://m.anakhebatindonesia.com/books?release=best-seller', function (data) {
-        let rows = [];
-        for (let index = 0; index < data.rows.length; index++) {
-          rows.push(`
-            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/book/${data.rows[index].id}" style="min-height:225px">
-              <div style="min-height:146px">
-                <img data-src="${data.rows[index].image.thumbnail}" class="swiper-lazy" width="100%">
-                <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:-75px;margin-left:-50px"></div>
-              </div>
-              <center>
-                <div class="book-title-wrap">
-                  ${data.rows[index].title}
-                </div>
-                <div class="text-currency-primary">
-                  <span class="text-currency-format">Rp</span>${data.rows[index].price.idr.text}
-                </div>
-              </center>
-            </div>
-          `);
-          // console.log(data.rows[index])
+      app.localforage.getItem('recomendedBooks').then(data => {
+        if ( data ) {
+          self.renderRecomended(data)
+        } else {
+          app.request.getJSON('https://m.anakhebatindonesia.com/books?release=best-seller', function (data) {
+            self.renderRecomended(data)
+          });
         }
-        rows = rows.join('');
-        $$('.swiper-recomended-book > .swiper-wrapper').html(rows);
-
-        app.swiper.create('.swiper-recomended-book', {
-          // Disable preloading of all images
-          preloadImages: false,
-          // Enable lazy loading
-          // loop: true,
-          lazy: true, 
-          slidesPerView: 3,
-          spaceBetween: 10,
-        });
-
-        // event to load detail buku;
-        $$('.swiper-href').on('click',function(e){
-          let dataHref = $$(this).data('href');
-          router.navigate(dataHref,{ transition: 'f7-push' })
-        })
-
-      });
+      }).catch(err => console.log(err))
 
       /* create swiper articles */
       let getDateDMY = this.getDateDMY;
-      app.request.getJSON('https://m.anakhebatindonesia.com/news', function (data) {
-        let rows = [];
-        data.rows.forEach(function(d){
-          d.create_at = getDateDMY(d.create_at);
-          rows.push(`
-            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/news/${d.id}" style="min-height:170px">
-              <div style="height:102px;overflow: hidden;">
-                <img data-src="${d.image.thumbnail}" onerror="this.src='static/error-322.png'" class="swiper-lazy" style="height: inherit;">
-                <div class="swiper-lazy-preloader" style="width:50px;height:50px;margin-top:-50px;margin-left:-25px"></div>
-              </div>
-              <center>
-                <div class="book-title-wrap">
-                  ${d.title}
-                </div>
-                <div class="text-color-gray">
-                  ${d.create_at}
-                </div>
-              </center>
-            </div>
-          `);
-        });
-        rows = rows.join('');
-        $$('.swiper-article > .swiper-wrapper').html(rows);
+      app.localforage.getItem('news').then(data => {
+        if ( data ) {
+          self.renderArtikel(data)
+        } else {
+          app.request.getJSON('https://m.anakhebatindonesia.com/news', function (data) {
+            self.renderArtikel(data)
+          });
+        }
+      }).catch(err => console.log(err))
 
-        app.swiper.create('.swiper-article', {
-          // Disable preloading of all images
-          preloadImages: false,
-          // Enable lazy loading
-          // loop: true,
-          lazy: true, 
-          slidesPerView: 3,
-          spaceBetween: 10,
-        });
-
-        // event to load detail buku;
-        $$('.swiper-href').on('click',function(e){
-          let dataHref = $$(this).data('href');
-          router.navigate(dataHref,{ transition: 'f7-push' })
-        })
-
-      });
       /* localforage.setDriver([
         localforage.INDEXEDDB,
         localforage.WEBSQL,
@@ -404,6 +255,219 @@
       openAlert: function () {
         var self = this;
         self.$app.dialog.alert('Hello World');
+      },
+      renderSlide: function(data) {
+        let $$ = this.$$;
+        let app = this.$app;
+        let router = this.$router;
+
+        let rows = [];
+        for (let index = 0; index < data.length; index++) {          
+          rows.push(`
+            <div class="swiper-slide">
+              <img data-src="${data[index].image.original}" class="swiper-lazy" width="100%">
+              <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:5px;margin-left:-50px"></div>
+            </div>
+          `);
+        }
+        rows = rows.join('');
+        /* inject data slide */
+        $$('.swiper-main-slide > .swiper-wrapper').html(rows);
+  
+        app.swiper.create('.swiper-main-slide', {
+          // Disable preloading of all images
+          preloadImages: false,
+          // Enable lazy loading
+          lazy: true,
+          loop: true,     
+          autoplay: {
+            delay: 2000,
+          },
+          slidesPerView: 1,
+          // speed: 400,
+          spaceBetween: 0,
+          pagination: {
+            el: '.swiper-pagination',
+            type: 'bullets',
+          },
+        });
+      },
+      renderNewRelease: function(data) {
+        let $$ = this.$$;
+        let app = this.$app;
+        let router = this.$router;
+
+        let rows = [];
+        for (let index = 0; index < data.rows.length; index++) {
+          rows.push(`
+            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/book/${data.rows[index].id}">
+              <div style="min-height:146px">
+                <img data-src="${data.rows[index].image.thumbnail}" class="swiper-lazy" width="100%">
+                <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:-75px;margin-left:-50px"></div>
+              </div>
+              <center>
+                <div class="book-title-wrap">
+                  ${data.rows[index].title}
+                </div>
+                <div class="text-currency-primary">
+                  <span class="text-currency-format">Rp</span>${data.rows[index].price.idr.text}
+                </div>
+              </center>
+            </div>
+          `);
+          // console.log(data.rows[index])
+        }
+        rows = rows.join('');
+        $$('.swiper-new-release > .swiper-wrapper').html(rows);
+  
+        app.swiper.create('.swiper-new-release', {
+          // Disable preloading of all images
+          preloadImages: false,
+          // Enable lazy loading
+          // loop: true,
+          lazy: true, 
+          slidesPerView: 3,
+          spaceBetween: 10,
+        });
+  
+        // event to load detail buku;
+        $$('.swiper-href').on('click',function(e){
+          let dataHref = $$(this).data('href');
+          router.navigate(dataHref,{ transition: 'f7-push' })
+        })
+      },
+      renderComingSoon: function(data) {
+        let $$ = this.$$;
+        let app = this.$app;
+        let router = this.$router;
+
+        let rows = [];
+        for (let index = 0; index < data.rows.length; index++) {
+          rows.push(`
+            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/book/${data.rows[index].id}" style="min-height:225px">
+              <div style="min-height:146px">
+                <img data-src="${data.rows[index].image.thumbnail}" class="swiper-lazy" width="100%">
+                <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:-75px;margin-left:-50px"></div>
+              </div>  
+              <center>
+                <div class="book-title-wrap">
+                  ${data.rows[index].title}
+                </div>
+                <div class="text-currency-primary">
+                  <span class="text-currency-format">Rp</span>${data.rows[index].price.idr.text}
+                </div>
+              </center>
+            </div>
+          `);
+          // console.log(data.rows[index])
+        }
+        rows = rows.join('');
+        $$('.swiper-coming-soon > .swiper-wrapper').html(rows);
+  
+        app.swiper.create('.swiper-coming-soon', {
+          // Disable preloading of all images
+          preloadImages: false,
+          // Enable lazy loading
+          // loop: true,
+          lazy: true, 
+          slidesPerView: 3,
+          spaceBetween: 10,
+        });
+  
+        // event to load detail buku;
+        $$('.swiper-href').on('click',function(e){
+          let dataHref = $$(this).data('href');
+          router.navigate(dataHref,{ transition: 'f7-push' })
+        }) 
+      },
+      renderRecomended: function(data) {
+        let $$ = this.$$;
+        let app = this.$app;
+        let router = this.$router;
+
+        let rows = [];
+        for (let index = 0; index < data.rows.length; index++) {
+          rows.push(`
+            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/book/${data.rows[index].id}" style="min-height:225px">
+              <div style="min-height:146px">
+                <img data-src="${data.rows[index].image.thumbnail}" class="swiper-lazy" width="100%">
+                <div class="swiper-lazy-preloader" style="width:100px;height:100px;margin-top:-75px;margin-left:-50px"></div>
+              </div>
+              <center>
+                <div class="book-title-wrap">
+                  ${data.rows[index].title}
+                </div>
+                <div class="text-currency-primary">
+                  <span class="text-currency-format">Rp</span>${data.rows[index].price.idr.text}
+                </div>
+              </center>
+            </div>
+          `);
+          // console.log(data.rows[index])
+        }
+        rows = rows.join('');
+        $$('.swiper-recomended-book > .swiper-wrapper').html(rows);
+  
+        app.swiper.create('.swiper-recomended-book', {
+          // Disable preloading of all images
+          preloadImages: false,
+          // Enable lazy loading
+          // loop: true,
+          lazy: true, 
+          slidesPerView: 3,
+          spaceBetween: 10,
+        });
+  
+        // event to load detail buku;
+        $$('.swiper-href').on('click',function(e){
+          let dataHref = $$(this).data('href');
+          router.navigate(dataHref,{ transition: 'f7-push' })
+        })
+      },
+      renderArtikel: function(data) {
+        let self = this;
+        let $$ = this.$$;
+        let app = this.$app;
+        let router = this.$router;
+
+        let rows = [];
+        data.rows.forEach(function(d){
+          d.create_at = self.getDateDMY(d.create_at);
+          rows.push(`
+            <div class="swiper-slide swiper-slide-border swiper-href" data-href="/news/${d.id}" style="min-height:170px">
+              <div style="height:102px;overflow: hidden;">
+                <img data-src="${d.image.thumbnail}" onerror="this.src='static/error-322.png'" class="swiper-lazy" style="height: inherit;">
+                <div class="swiper-lazy-preloader" style="width:50px;height:50px;margin-top:-50px;margin-left:-25px"></div>
+              </div>
+              <center>
+                <div class="book-title-wrap">
+                  ${d.title}
+                </div>
+                <div class="text-color-gray">
+                  ${d.create_at}
+                </div>
+              </center>
+            </div>
+          `);
+        });
+        rows = rows.join('');
+        $$('.swiper-article > .swiper-wrapper').html(rows);
+
+        app.swiper.create('.swiper-article', {
+          // Disable preloading of all images
+          preloadImages: false,
+          // Enable lazy loading
+          // loop: true,
+          lazy: true, 
+          slidesPerView: 3,
+          spaceBetween: 10,
+        });
+
+        // event to load detail buku;
+        $$('.swiper-href').on('click',function(e){
+          let dataHref = $$(this).data('href');
+          router.navigate(dataHref,{ transition: 'f7-push' })
+        })
       },
       releaseBook: function (release) {
         console.log('release : ',release);
